添加线上环境的配置